syntax = "proto3";

package user;

option go_package = "user/pb";

service UserService {
    rpc Register(RegisterRequest)returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string user_id = 1;
    string token = 2;
}

